kube/elk/filebeat-security.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat-security
  namespace: monitoring
  labels:
    k8s-app: filebeat-security
spec:
  selector:
    matchLabels:
      k8s-app: filebeat-security
  template:
    metadata:
      labels:
        k8s-app: filebeat-security
    spec:
      serviceAccountName: filebeat-security
      terminationGracePeriodSeconds: 30
      containers:
      - name: filebeat-security
        image: docker.elastic.co/beats/filebeat:7.6.2
        args: [
          "-c", "/etc/filebeat.yml",
          "-e",
        ]
        securityContext:
          runAsUser: 0
          # If using Red Hat OpenShift uncomment this:
          #privileged: true
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: config
          mountPath: /etc/filebeat.yml
          readOnly: true
          subPath: filebeat.yml
        - name: data
          mountPath: /usr/share/filebeat/data
        - name: varlog
          mountPath: /hostfs/var/log
          readOnly: true
      volumes:
      - name: config
        configMap:
          defaultMode: 0600
          name: filebeat-security-config
      - name: varlog
        hostPath:
          path: /var/log
      # data folder stores a registry of read status for all files, so we don't send everything again on a Filebeat pod restart
      - name: data
        hostPath:
          path: /var/lib/filebeat-security-data
          type: DirectoryOrCreate
