kube/elk/logstash.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: logstash 
  namespace: monitoring
  labels:
    k8s-app: logstash 
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: logstash
  template:
    metadata:
      labels:
        k8s-app: logstash
    spec:
      containers:
        - name: logstash 
          image: docker.elastic.co/logstash/logstash:7.6.2
          ports:
            - containerPort: 5044 
          volumeMounts:
            - name: config
              mountPath: /usr/share/logstash/config
            - name: pipeline
              mountPath: /usr/share/logstash/pipeline
      volumes:
        - name: config
          configMap:
            name: logstash-config
            items:
              - key: logstash.yml
                path: logstash.yml
        - name: pipeline
          configMap:
            name: logstash-config
            items: 
              - key: logstash.conf
                path: logstahs.conf
---
apiVersion: v1 
kind: Service 
metadata:
  name: logstash-serviceh
  namespace: monitoring
  labels:
    k8s-app: logstash 
spec:
  selector:
    k8s-app: logstash 
  ports:
    - protocol: TCP
      port: 5044
      targetPort: 5044 
  type: ClusterIP
